styles/main.css
* {
  font-family: "Figtree", sans-serif;
  box-sizing: border-box;


}

body {
  background-color: hsl(47, 88%, 63%);
  color: #111111;
  font-size: 16px;
  font-weight: 500;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  /* overflow: hidden; */
  margin: 0;
  padding: 0;
}

.card-container {
  background-color: white;
  display: flex;
  flex-direction: column;
  padding: 24px;
  border-radius: 20px;
  height: 522px;
  width: 384px;
  border: 1px solid hsl(0, 0%, 7%);
  box-shadow: 8px 8px;

  img {
    border-radius: 10px;
    height: 200px;
    aspect-ratio: 2 / 1;
    object-fit: cover;
    width: 100%;
  }
}

article {
  justify-content: center;
  margin: 12px 0px;
}

.date {
  font-size: 14px;
}

h3 {
  font-size: 24px;
  margin: 0;

  &:hover {
    color: hsl(47, 88%, 63%);
    cursor: pointer;

  }
}

.main-content {
  flex-grow: 1;

  .message {
    color: #6B6B6B;
    line-height: 1.5;
  }
}

.status {
  background-color: hsl(47, 88%, 63%);
  padding: 4px 12px;
  border-radius: 4px;
  font-weight: 800;
  font-size: 14px;
  display: inline-block;
  margin-top: 12px;
}

.profile {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  font-size: 14px;
  font-weight: 800;

}

.profile img {
  object-fit: cover;
  width: 32px;
  height: 32px;
  display: block;
}

.attribution {
  font-size: 11px;
  text-align: center;
  position: absolute;
  bottom: 10px;

}

.attribution a {
  color: hsl(228, 45%, 44%);
}

@media (max-width: 375px) {
  body {
    font-size: 14px;
  }

  .date,
  .status {
    font-size: 12px;
  }


  h3 {
    font-size: 20px;
  }

  .card-container {
    height: 501px;
    width: 327px;
  }

  .main-content {
    margin: 12px 0 0;
  }
}

